--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+*{
+  color: #fff;
+  font-family: "Bree Serif", serif;
+  box-sizing: border-box;
+}
+body{
+  background-color: rgb(6, 4, 23);
+  height: 2500px;
+  overflow-x: hidden
+}
+::-webkit-scrollbar{
+  width: 10px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: #00ffee;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-track{
+  background-color: transparent;
+  width: 20px;
+}
