--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     padding-top: 10px;
-    padding-bottom: 0;
+    padding-bottom: 10px;
     height: 80px;
     background-color: rgba(0, 0, 0, 0.1);
     -webkit-backdrop-filter: blur(10px);
@@ -13,6 +13,7 @@
     position: fixed;
     z-index: 10;
     top: 0;
+    width: 100vw;
 }
 .conta .men{
     font-size: 40px;
@@ -54,7 +55,7 @@ img{
     background-color: #ff3c78;
     left: 0;
     border-radius: 3px;
-    bottom: 0;
+    bottom: -10px;
 }
 li{
     position: relative;
@@ -67,7 +68,7 @@ li::after{
     background-color: #ff3c78;
     left: 0;
     border-radius: 3px;
-    bottom: 0;
+    bottom: -10px;
     transition: 0.3s;
 }
 li:hover::after{
